# qr_generator

./: Cargo.toml  README.md
migrations/: 20240626122419_qr_data.down.sql  20240626122419_qr_data.up.sql
src/: app_state.rs  config_secrets.rs  custom_error.rs  image_processor.rs  lib.rs  main.rs  qr_strategy.rs  utils.rs
src/api/: health_route.rs  mod.rs  route_handler.rs
src/api/qr/: create_qr.rs  mod.rs
src/models/: mod.rs  qr_business.rs  qr_main_mods.rs  qr_model.rs
src/qr_options/: mod.rs  qrprofile.rs  qrtext.rs
src/tests/: qrtext_test.rs
