[package]
name = "qr_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
image = "0.25.1"
qrcode = "0.14.0"
validator = { version = "0.16", features = ["derive"] }
actix-cors = "0.6.4"
sqlx = { version = "0.7.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
dotenv = "0.15.0"
actix-web = "4.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
log = "0.4.21"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.5"
lazy_static = "1.5.0"

[lib]
name = "qr_prototype"
path = "src/lib.rs"
